--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <script>
       var fireballSize = 22;
       var getFireballSpeed = function(left) {
-        if (left == true) {
+        if (left === true) {
           return 5;
         }
         return 2;
@@ -245,10 +245,10 @@
         return wizardWidth * 1.337;
       };
       var getWizardX = function(width) {
-        return width / 2;
+        return width / 2 - wizardWidth / 2;
       };
       var getWizardY = function(height) {
-        return height / 2;
+        return height / 3 - getWizardHeight() / 2;
       };
     </script>
     <script src="js/game.js"></script>
