--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
     <script>
       var fireballSize = 22;
       var getFireballSpeed = function(left) {
-        if (left === true) {
+        if (left) {
           return 5;
         }
         return 2;
