--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="demo"></div>
 
       <div class="setup-open">
-        <img src="./img/user-1.jpg" class="setup-open-icon" />
+        <img src="./img/user-1.jpg" class="setup-open-icon" tabindex="0"/>
       </div>
     </header>
 
@@ -88,6 +88,7 @@
       <form
         class="setup-wizard-form"
         method="post"
+        url = 'https://js.dump.academy/code-and-magick '
         enctype="multipart/form-data"
         autocomplete="off"
       >
@@ -102,6 +103,7 @@
                 type="text"
                 name="username"
                 maxlength="25"
+                minlength="2"
                 required
                 class="setup-user-name"
                 value="Синий Пендальф"
@@ -157,9 +159,9 @@
           </div>
 
           <div class="setup-fireball-wrap">
-            <div class="setup-fireball"></div>
             <input type="hidden" name="fireball-color" value="#ee4830" />
-          </div>
+              <div class="setup-fireball"></div>
+        </div>
 
           <div class="setup-artifacts" dropzone="move">
             <div class="setup-artifacts-cell"></div>
